default/objects/dsfs__DocuSign_Status__c/dsfs__DocuSign_Status__c.object-meta.xml
<CustomObject>
    <description>DocuSign Status is the foundation Custom Object for integration of DocuSign and Salesforce.</description>
    <label>DocuSign Status</label>
    <nameField>
        <displayFormat>DSX-{0000000}</displayFormat>
        <label>Envelope#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>