default/objects/dsfs__DocuSign_Status__c/fields/Document_name__c.field-meta.xml
<CustomField>
    <fullName>Document_name__c</fullName>
    <label>Document name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>