default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Declined_Reason_Extended__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Declined_Reason_Extended__c</fullName>
    <label>Declined Reason Extended</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>