default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Envelope_Status__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Envelope_Status__c</fullName>
    <label>Envelope Status</label>
    <length>56</length>
    <type>Text</type>
</CustomField>